Bug 1066193: Explicit this parameter in MDefinition::is<T> so as to prevent compilation issues with gcc; r=h4writer